@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 0.9-3
-Date: 2013-01-08
-Packaged: 2013-01-09 23:15:22 UTC; rforge
+Version: 0.9-6
+Date: 2013-02-26
+Packaged: 2013-02-27 03:15:46 UTC; rforge
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS
@@ -16,6 +16,7 @@ Suggests: lattice, rgdal, RCurl, XML, SSOAP, XMLSchema, dismo
 Repository: CRAN
 URL: http://aqp.r-forge.r-project.org/
 Repository/R-Forge/Project: aqp
-Repository/R-Forge/Revision: 643
-Repository/R-Forge/DateTimeStamp: 2013-01-09 21:28:04
-Date/Publication: 2013-01-10 18:19:04
+Repository/R-Forge/Revision: 665
+Repository/R-Forge/DateTimeStamp: 2013-02-26 23:30:07
+Date/Publication: 2013-02-28 07:21:03
+NeedsCompilation: no
